# fastapi-hello-world

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
app/: main.py
